# SiCal

./: .gitignore  LICENSE  README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
assets/: icon.xcf
ios/Runner/: AppDelegate.swift  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/src/: app.dart
lib/src/bridge/: sia_bridge.dart
lib/src/database/: database.dart
lib/src/models/: calendar.dart  chunk.dart  event.dart  manifest.dart  recurrence.dart
lib/src/repositories/: calendar_repository.dart
lib/src/rust/: api.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/services/: auth_service.dart  calendar_file_open_service.dart  event_notification_service.dart  ics_import_service.dart  incoming_calendar_intent_handler.dart  sia_storage_service.dart  sync_engine.dart  sync_foreground_service.dart  timezone_service.dart
lib/src/utils/: event_time_range_adjustment.dart  reminder_time_format.dart
rust/: Cargo.toml
rust/src/: api.rs  frb_generated.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/cargokit/gradle/: plugin.gradle
rust_builder/ios/: sical_rust.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: sical_rust.podspec
rust_builder/windows/: CMakeLists.txt
test/: event_form_screen_inline_picker_test.dart  event_time_range_adjustment_test.dart  ics_import_service_test.dart  incoming_calendar_intent_handler_test.dart  sync_regression_guards_test.dart  widget_test.dart
(+10 files in other folders)
